regardless of style, ensure headers don't wrap at narrow widths.

--- a/src/assets/stylesheets/frontage.scss
+++ b/src/assets/stylesheets/frontage.scss
@@ -12,10 +12,6 @@
 
 h1 {
   font-family: 'Frontage 3D';
-
-  @media (min-width: 64em) {
-    white-space: nowrap;
-  }
 }
 
 h2, p, blockquote {
