--- a/src/assets/stylesheets/layout.scss
+++ b/src/assets/stylesheets/layout.scss
@@ -93,6 +93,7 @@ h1 {
 
   @media (min-width: 60em) {
     font-size: 3em;
+    white-space: nowrap;
   }
 }
 
